# go-llama-cpp

./: .gitignore  CMakeLists.txt  Makefile  go.mod  go.work  go.work.sum  go_llama.cpp  go_llama.go  go_llama.h  go_llama_darwin.go  instruct.Dockerfile  options.go
.github/workflows/: build.yml
config/: llama-3-8B-instruct.yaml  phi-3-mini-4K-instruct.yaml  phi-3.yaml  zephyr-7B-beta.yaml
examples/: ansi.go  main.go
examples/interactive/: go.mod  interactive.go  main.go
examples/predict/: go.mod  main.go  predict.go
examples/server/: go.mod  main.go
examples/tokenize/: go.mod  main.go  tokenize.go
pkg/cache/: cache.cpp  cache.go  cache.h
pkg/decoder/: decoder.cpp  decoder.go  decoder.h
pkg/llama/: go_llama.go  llama.cpp  llama.go  llama.h
pkg/options/: options.cpp  options.go  options.h
pkg/predictor/: predictor.cpp  predictor.go  predictor.h
pkg/sampling/: sampling.cpp  sampling.go  sampling.h
pkg/state/: state.go
pkg/tokenizer/: tokenizer.cpp  tokenizer.go  tokenizer.h
pkg/util/: util.cpp  util.go  util.h
predictor/: predictor.cpp  predictor.go
tokenizer/: tokenizer.cpp  tokenizer.go  tokenizer.h
